--- a/env.yml
+++ b/env.yml
@@ -61,4 +61,5 @@ dependencies:
     - openai==0.27.7
     - urllib3==2.0.2
     - yarl==1.9.2
+    - datasets
 prefix: /Users/ricardo/anaconda3/envs/tot
