--- a/env.yml
+++ b/env.yml
@@ -62,4 +62,5 @@ dependencies:
     - urllib3==2.0.2
     - yarl==1.9.2
     - datasets
+    - python-dotenv
 prefix: /Users/ricardo/anaconda3/envs/tot
